<?xml version="1.0"?>
<package>
  <name>gui_application</name>
  <version>0.1.0</version>
  <description>Qt GUI for KITrokopter</description>
  <maintainer email="kitrokopter@isibboi.de">KITrokopter Team</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
 
</package>
